--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-compatible" content="ie-edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.min.css">
-    
+  
    
     <title>LIBRARY</title>
   </head>
   <body>
-    <div class="container mt-4" >
+   
+  
+  <div class="container mt-4" >
       <h1 class="display-4" style="text-align: center;"><i class="fas fa-book-open text-info"></i>MY<span class="text-info" >RECORD</span>LIST</h1>
    <form id="book-Form">
     <div class="form-group">
@@ -36,10 +38,14 @@
     </div>
     <input type="submit" value="ADD BOOK" class="btn btn-info btn-block">
    </form>
+   <br>
+
+   <a href="records.html"><input type="button" value="ALL RECORDS" class="btn btn-danger btn-block"></a>
+   
    
    <table class="table table-dark table-bordered table-hover mt-5">
     <thead>
-      <th>DATE</th>
+      <th >DATE</th>
       <th>STUDENT</th>
      <th>TITLE</th>
      <th>AUTHOR</th>
@@ -55,4 +61,6 @@
 
   </body>
   <script src="app.js"></script>
+  
+ 
 </html>
